made some changes to allow pieces to move any amount horizontally

--- a/breakthru.ipynb
+++ b/breakthru.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,6 @@
     "    pass\n",
     "\n",
     "class Game:\n",
-    "    \n",
-    "    MAX_MOVES = 2\n",
     "    \n",
     "    def __init__(self, start): # start = starting player (1 or -1)\n",
     "        \n",
@@ -33,6 +31,27 @@
     "        self.numMoves = 0 # number of moves already made by the player\n",
     "        \n",
     "        self.gameState = 0; # gamestate => 0 if game is in progress, 1 if gold wins, -1 if silver wins\n",
+    "        \n",
+    "        \n",
+    "    def hasPiecesBetween(self, old_x, old_y, new_x, new_y):\n",
+    "        # Check if positions are not parallel horizontally or vertically\n",
+    "        if old_x != new_x and old_y != new_y:\n",
+    "            raise ValueError(\"Positions must be parallel either horizontally or vertically\")\n",
+    "\n",
+    "        dx = 1 if new_x > old_x else -1 if new_x < old_x else 0 # Determine the direction of movement (horizontal left/right)\n",
+    "        dy = 1 if new_y > old_y else -1 if new_y < old_y else 0 # Determine the direction of movement (vertical up/down)\n",
+    "\n",
+    "        \n",
+    "        current_x, current_y = old_x + dx, old_y + dy\n",
+    "        while (current_x, current_y) != (new_x, new_y): # Iterate through positions between (old_x, old_y) and (new_x, new_y)\n",
+    "            if self.board[current_x, current_y] != 0:\n",
+    "                return True  # Found a piece between\n",
+    "            current_x += dx \n",
+    "            current_y += dy\n",
+    "        if self.board[current_x, current_y] != 0: # for the case of moving a single square\n",
+    "            return True \n",
+    "\n",
+    "        return False  # No obstacles found\n",
     "    \n",
     "    def move(self, originalPos, nextPos):\n",
     "        old_x,old_y = originalPos;\n",
@@ -41,23 +60,24 @@
     "        if not (0 <= old_x <= 6 and 0 <= old_y <= 6 and 0 <= new_x <= 6 and 0 <= new_y <= 6) : # either the old pos or new pos is out of bounds for the 7x7 board\n",
     "            raise MoveError(\"Out of Bounds\")\n",
     "        \n",
-    "        if (self.board[old_x][old_y] != self.toMove) or (self.board[old_x][old_y] + self.toMove == 3) : # piece selected isn't the current player's pieces\n",
-    "            #explanation, self.board[old_x][old_y] + self.toMove will only ever equal 3 if the selected piece is the flag, and the player to move is gold\n",
+    "        if self.board[old_x][old_y] == 0 : # if the selected tile to move doesn't have a piece on it\n",
+    "            raise MoveError(\"No Piece in that tile\")\n",
+    "        \n",
+    "        if (self.board[old_x][old_y] * self.toMove < 0) : # piece selected isn't the current player's pieces\n",
+    "            #explanation: because gold's pieces are positive and silver's are negative, this condition will only be negative if the current player selects the oposing player's pieces\n",
     "            raise MoveError(\"Invalid Piece to Move\")\n",
     "        \n",
     "        euclidian_distance = (old_x - new_x)**2 + (old_y - new_y)**2 # euclidian distance squared\n",
     "        \n",
-    "        if euclidian_distance > 2 or euclidian_distance == 0 : # if tried to move in place, or tried to move too far away\n",
-    "            raise MoveError(\"Invalid Movement. Tried to move too far, or in place!\")\n",
+    "        if ((euclidian_distance != 2) and (old_x != new_x and old_y != new_y)) or ((old_x,old_y) == (new_x,new_y)) :\n",
+    "            # if it's not the immedite diagonal and not in a straight line. Or moving in place\n",
+    "            raise MoveError(\"Invalid Position to move to!\")\n",
     "        \n",
     "        # finished testing general invalidations, now decide what move is being made\n",
     "        \n",
-    "        if euclidian_distance == 1 : # horizontal move \n",
-    "            if (self.board[new_x][new_y] != 0) : # must move into an empty space\n",
-    "                raise MoveError(\"Invalid Movement. Space is already occupied\")\n",
-    "\n",
-    "            self.board[new_x][new_y] = self.board[old_x][old_y]\n",
-    "            self.board[old_x][old_y] = 0\n",
+    "        if old_x == new_x or old_y == new_y : # horizontal move \n",
+    "            if (not (self.hasPiecesBetween(old_x, old_y, new_x, new_y))) : # if there are any pieces in between the old and new positions\n",
+    "                raise MoveError(\"Invalid Movement. There are other pieces impeding this movement\")\n",
     "            \n",
     "            if self.toMove == 1 : # gold pieces\n",
     "                if self.board[old_x][old_y] == 1 :\n",
@@ -66,76 +86,198 @@
     "                elif (self.numMoves == 0) : # moving flag. since it's not a piece, if it passed the earlier checks, it must be the flag\n",
     "                    self.flag = (new_x,new_y) # will only ever enter this condition if the player can select the flag piece, aka, the player owns the gold pieces\n",
     "                    self.numMoves += 1\n",
+    "                    if new_x == 0 or new_x == 6 or new_y == 0 or new_y == 6 :\n",
+    "                        self.gameState = 1 #flag piece reached the border, gold won\n",
     "                else :\n",
     "                    raise MoveError(\"Invalid Movement. Not enough movement left to move flag\")\n",
     "                \n",
-    "                if new_x == 0 or new_x == 6 or new_y == 0 or new_y == 6 :\n",
-    "                    self.gameState = 1 # gold piece reached the border, gold won\n",
     "            else : # silver pieces\n",
     "                self.silverPieces.remove((old_x,old_y))\n",
     "                self.silverPieces.append((new_x,new_y))\n",
     "            \n",
+    "            \n",
+    "            self.board[new_x][new_y] = self.board[old_x][old_y] # if no errors were raised, change the position\n",
+    "            self.board[old_x][old_y] = 0\n",
+    "            \n",
     "            self.numMoves += 1\n",
     "            \n",
+    "            if self.numMoves == 2 :\n",
+    "                self.numMoves = 0 # reset move counter\n",
+    "                self.toMove *= -1 # after moving twice or moving the flag, give the turn to the other player\n",
+    "            \n",
     "            return True # successful move\n",
-    "        \n",
-    "        # if euclidian distance isn't 1, because of the test done earlier to make sure the movement wasn't past what is allowed, it must be 2\n",
-    "        \n",
+    "                \n",
     "        # diagonal capture\n",
     "        \n",
-    "        if self.board[new_x][new_y] == 0 :\n",
-    "            raise MoveError(\"Invalid Movement. can't move into a diagonal empty space\")\n",
-    "        if self.board[new_x][new_y] * self.board[old_x][old_y] > 0 : # will only result in positive if the pieces are of the same side\n",
-    "            raise MoveError(\"Invalid Movement. can't capture your own pieces\")\n",
-    "        if self.numMoves != 0 :\n",
-    "            raise MoveError(\"Invalid Movement. Not enough movement to capture\")\n",
-    "        \n",
-    "        if self.toMove == 1 and self.board[new_x][new_y] == -1 : # gold pieces capturing a silver piece\n",
-    "            if self.board[old_x][old_y] == 1 :\n",
-    "                self.goldPieces.remove((old_x,old_y))\n",
-    "                self.goldPieces.append((new_x,new_y))\n",
-    "            else : # moving flag\n",
-    "                self.flag = (new_x,new_y) # will only ever enter this condition if the player can select the flag piece, aka, the player owns the gold pieces\n",
+    "        if euclidian_distance == 2 :# only going to me equal to 2 at the immediate diagonals\n",
+    "            if self.board[new_x][new_y] == 0 :\n",
+    "                raise MoveError(\"Invalid Movement. can't move into a diagonal empty space\")\n",
+    "            if self.board[new_x][new_y] * self.board[old_x][old_y] > 0 : # will only result in positive if the pieces are of the same side\n",
+    "                raise MoveError(\"Invalid Movement. can't capture your own pieces\")\n",
+    "            if self.numMoves != 0 :\n",
+    "                raise MoveError(\"Invalid Movement. Not enough movement to capture\")\n",
     "            \n",
-    "            self.silverPieces.remove((new_x,new_y)) # silver piece was captured\n",
-    "            \n",
-    "        elif self.toMove == -1 and self.board[new_x][new_y] == 1 :\n",
-    "            self.silverPieces.remove((old_x,old_y))\n",
-    "            self.silverPieces.append((new_x,new_y))\n",
-    "            \n",
-    "            self.goldPieces.remove((new_x,new_y)) # gold piece was captured\n",
-    "            \n",
-    "        elif self.toMove == -1 and self.board[new_x][new_y] == 2 :\n",
-    "            self.silverPieces.remove((old_x,old_y))\n",
-    "            self.silverPieces.append((new_x,new_y))\n",
-    "            \n",
-    "            self.flag = None;\n",
-    "            self.gameState = -1 #flag was captured, silver won\n",
-    "            \n",
-    "        self.numMoves += 2; # capturing takes all the move\n",
-    "    "
+    "            if self.toMove == 1 and self.board[new_x][new_y] == -1 : # gold pieces capturing a silver piece\n",
+    "                if self.board[old_x][old_y] == 1 :\n",
+    "                    self.goldPieces.remove((old_x,old_y))\n",
+    "                    self.goldPieces.append((new_x,new_y))\n",
+    "                else : # moving flag\n",
+    "                    self.flag = (new_x,new_y) # will only ever enter this condition if the player can select the flag piece, aka, the player owns the gold pieces\n",
+    "                \n",
+    "                self.silverPieces.remove((new_x,new_y)) # silver piece was captured\n",
+    "                \n",
+    "            elif self.toMove == -1 and self.board[new_x][new_y] == 1 :\n",
+    "                self.silverPieces.remove((old_x,old_y))\n",
+    "                self.silverPieces.append((new_x,new_y))\n",
+    "                \n",
+    "                self.goldPieces.remove((new_x,new_y)) # gold piece was captured\n",
+    "                \n",
+    "            elif self.toMove == -1 and self.board[new_x][new_y] == 2 :\n",
+    "                self.silverPieces.remove((old_x,old_y))\n",
+    "                self.silverPieces.append((new_x,new_y))\n",
+    "                \n",
+    "                self.flag = None;\n",
+    "                self.gameState = -1 #flag was captured, silver won\n",
+    "                \n",
+    "            self.toMove *= -1 # after capturing, give the turn to the other player"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "game = Game(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(2, 2), (2, 3), (2, 4), (3, 2), (3, 3), (3, 4), (4, 2), (4, 3), (4, 4)]"
+       "array([[ 0.,  0., -1., -1., -1.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [-1.,  0.,  1.,  1.,  1.,  0., -1.],\n",
+       "       [-1.,  0.,  1.,  2.,  1.,  0., -1.],\n",
+       "       [-1.,  0.,  1.,  1.,  1.,  0., -1.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0., -1., -1., -1.,  0.,  0.]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "game = Game(2)\n",
-    "\n",
+    "game.board"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "game.toMove"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "MoveError",
+     "evalue": "Invalid Movement. There are other pieces impeding this movement",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mMoveError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[120], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mgame\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmove\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[116], line 71\u001b[0m, in \u001b[0;36mGame.move\u001b[0;34m(self, originalPos, nextPos)\u001b[0m\n\u001b[1;32m     69\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m old_x \u001b[38;5;241m==\u001b[39m new_x \u001b[38;5;129;01mor\u001b[39;00m old_y \u001b[38;5;241m==\u001b[39m new_y : \u001b[38;5;66;03m# horizontal move \u001b[39;00m\n\u001b[1;32m     70\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhasPiecesBetween(old_x, old_y, new_x, new_y)) : \u001b[38;5;66;03m# if there are any pieces in between the old and new positions\u001b[39;00m\n\u001b[0;32m---> 71\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m MoveError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Movement. There are other pieces impeding this movement\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     73\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtoMove \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m : \u001b[38;5;66;03m# gold pieces\u001b[39;00m\n\u001b[1;32m     74\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mboard[old_x][old_y] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m :\n",
+      "\u001b[0;31mMoveError\u001b[0m: Invalid Movement. There are other pieces impeding this movement"
+     ]
+    }
+   ],
+   "source": [
+    "game.move((0,2),(1,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(2, 3), (2, 4), (3, 2), (3, 4), (4, 2), (4, 3), (4, 4), (1, 3)]"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "game.goldPieces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   8    5    4    5    8 \n",
+      "   5    2    1    2    5 \n",
+      "   4    1    0    1    4 \n",
+      "   5    2    1    2    5 \n",
+      "   8    5    4    5    8 \n"
+     ]
+    }
+   ],
+   "source": [
+    "def highlight_positions(x1, y1):\n",
+    "    matrix_size = 5\n",
+    "    positions_and_distances = {}\n",
+    "\n",
+    "    for x2 in range(matrix_size):\n",
+    "        for y2 in range(matrix_size):\n",
+    "            distance_squared = (x1 - x2)**2 + (y1 - y2)**2\n",
+    "            positions_and_distances[(x2, y2)] = distance_squared\n",
+    "\n",
+    "    return positions_and_distances\n",
+    "\n",
+    "# Highlight positions and distances for x1=2, y1=2\n",
+    "highlighted_positions = highlight_positions(2, 2)\n",
+    "\n",
+    "# Display the 5x5 matrix with highlighted positions and distances\n",
+    "matrix_size = 5\n",
+    "for i in range(matrix_size):\n",
+    "    for j in range(matrix_size):\n",
+    "        cell_value = highlighted_positions.get((i, j), 0)\n",
+    "        print(f\"{cell_value:4}\", end=\" \")\n",
+    "    print()\n"
    ]
   },
   {
