--- a/breakthru.ipynb
+++ b/breakthru.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
     "        # finished testing general invalidations, now decide what move is being made\n",
     "        \n",
     "        if old_x == new_x or old_y == new_y : # horizontal move \n",
-    "            if (not (self.hasPiecesBetween(old_x, old_y, new_x, new_y))) : # if there are any pieces in between the old and new positions\n",
+    "            if (self.hasPiecesBetween(old_x, old_y, new_x, new_y)) : # if there are any pieces in between the old and new positions\n",
     "                raise MoveError(\"Invalid Movement. There are other pieces impeding this movement\")\n",
     "            \n",
     "            if self.toMove == 1 : # gold pieces\n",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,14 +153,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.,  0., -1., -1., -1.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
+       "array([[ 0.,  0.,  0., -1., -1.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  0., -1.],\n",
        "       [-1.,  0.,  1.,  1.,  1.,  0., -1.],\n",
        "       [-1.,  0.,  1.,  2.,  1.,  0., -1.],\n",
        "       [-1.,  0.,  1.,  1.,  1.,  0., -1.],\n",
@@ -168,7 +168,7 @@
        "       [ 0.,  0., -1., -1., -1.,  0.,  0.]])"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,16 +179,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-1"
+       "1"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,24 +199,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
-     "ename": "MoveError",
-     "evalue": "Invalid Movement. There are other pieces impeding this movement",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mMoveError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[120], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mgame\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmove\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[116], line 71\u001b[0m, in \u001b[0;36mGame.move\u001b[0;34m(self, originalPos, nextPos)\u001b[0m\n\u001b[1;32m     69\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m old_x \u001b[38;5;241m==\u001b[39m new_x \u001b[38;5;129;01mor\u001b[39;00m old_y \u001b[38;5;241m==\u001b[39m new_y : \u001b[38;5;66;03m# horizontal move \u001b[39;00m\n\u001b[1;32m     70\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhasPiecesBetween(old_x, old_y, new_x, new_y)) : \u001b[38;5;66;03m# if there are any pieces in between the old and new positions\u001b[39;00m\n\u001b[0;32m---> 71\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m MoveError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Movement. There are other pieces impeding this movement\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     73\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtoMove \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m : \u001b[38;5;66;03m# gold pieces\u001b[39;00m\n\u001b[1;32m     74\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mboard[old_x][old_y] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m :\n",
-      "\u001b[0;31mMoveError\u001b[0m: Invalid Movement. There are other pieces impeding this movement"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "game.move((0,2),(1,2))"
+    "game.move((1,2),(1,6))"
    ]
   },
   {
