preventing a piece from moving twice, fixed bug where the board wasn't updated when capturing another piece

--- a/breakthru.ipynb
+++ b/breakthru.ipynb
@@ -30,8 +30,9 @@
     "        self.toMove = start # player to move first\n",
     "        self.numMoves = 0 # number of moves already made by the player\n",
     "        \n",
-    "        self.gameState = 0; # gamestate => 0 if game is in progress, 1 if gold wins, -1 if silver wins\n",
-    "        \n",
+    "        self.gameState = 0 # gamestate => 0 if game is in progress, 1 if gold wins, -1 if silver wins\n",
+    "\n",
+    "        self.prevMove = None # this variable is used to store the first movement made in a turn, to ensure that a piece isn't moved twice\n",
     "        \n",
     "    def hasPiecesBetween(self, old_x, old_y, new_x, new_y):\n",
     "        # Check if positions are not parallel horizontally or vertically\n",
@@ -71,18 +72,21 @@
     "        \n",
     "        if ((euclidian_distance != 2) and (old_x != new_x and old_y != new_y)) or ((old_x,old_y) == (new_x,new_y)) :\n",
     "            # if it's not the immedite diagonal and not in a straight line. Or moving in place\n",
-    "            raise MoveError(\"Invalid Position to move to!\")\n",
+    "            raise MoveError(\"Invalid Position to move to\")\n",
     "        \n",
     "        # finished testing general invalidations, now decide what move is being made\n",
     "        \n",
     "        if old_x == new_x or old_y == new_y : # horizontal move \n",
     "            if (self.hasPiecesBetween(old_x, old_y, new_x, new_y)) : # if there are any pieces in between the old and new positions\n",
     "                raise MoveError(\"Invalid Movement. There are other pieces impeding this movement\")\n",
+    "            if self.prevMove == (old_x,old_y) : # if there are any pieces in between the old and new positions\n",
+    "                raise MoveError(\"Invalid Movement. Cannot move piece that has already moved this turn\")\n",
     "            \n",
     "            if self.toMove == 1 : # gold pieces\n",
     "                if self.board[old_x][old_y] == 1 :\n",
     "                    self.goldPieces.remove((old_x,old_y))\n",
     "                    self.goldPieces.append((new_x,new_y))\n",
+    "                    self.prevMove = (new_x,new_y)\n",
     "                elif (self.numMoves == 0) : # moving flag. since it's not a piece, if it passed the earlier checks, it must be the flag\n",
     "                    self.flag = (new_x,new_y) # will only ever enter this condition if the player can select the flag piece, aka, the player owns the gold pieces\n",
     "                    self.numMoves += 1\n",
@@ -94,6 +98,7 @@
     "            else : # silver pieces\n",
     "                self.silverPieces.remove((old_x,old_y))\n",
     "                self.silverPieces.append((new_x,new_y))\n",
+    "                self.prevMove = (new_x,new_y)\n",
     "            \n",
     "            \n",
     "            self.board[new_x][new_y] = self.board[old_x][old_y] # if no errors were raised, change the position\n",
@@ -103,13 +108,14 @@
     "            \n",
     "            if self.numMoves == 2 :\n",
     "                self.numMoves = 0 # reset move counter\n",
+    "                self.prevMove = None\n",
     "                self.toMove *= -1 # after moving twice or moving the flag, give the turn to the other player\n",
     "            \n",
     "            return True # successful move\n",
     "                \n",
     "        # diagonal capture\n",
     "        \n",
-    "        if euclidian_distance == 2 :# only going to me equal to 2 at the immediate diagonals\n",
+    "        if euclidian_distance == 2 : # only going to be equal to 2 at the immediate diagonals\n",
     "            if self.board[new_x][new_y] == 0 :\n",
     "                raise MoveError(\"Invalid Movement. can't move into a diagonal empty space\")\n",
     "            if self.board[new_x][new_y] * self.board[old_x][old_y] > 0 : # will only result in positive if the pieces are of the same side\n",
@@ -138,6 +144,9 @@
     "                \n",
     "                self.flag = None;\n",
     "                self.gameState = -1 #flag was captured, silver won\n",
+    "                \n",
+    "            self.board[new_x][new_y] = self.board[old_x][old_y] # if no errors were raised, change the position\n",
+    "            self.board[old_x][old_y] = 0\n",
     "                \n",
     "            self.toMove *= -1 # after capturing, give the turn to the other player"
    ]
