added some heuristics to use later

--- a/breakthru.ipynb
+++ b/breakthru.ipynb
@@ -12,10 +12,14 @@
     "    pass\n",
     "\n",
     "class Game:\n",
+    "    BOARD_SIZE = 7\n",
+    "    TOTAL_GOLD_PIECES = 8\n",
+    "    TOTAL_SILVER_PIECES = 12\n",
+    "    \n",
     "    \n",
     "    def __init__(self, start): # start = starting player (1 or -1)\n",
     "        \n",
-    "        self.board = np.zeros((7, 7)); # initialize a 7x7 board populated with 0's\n",
+    "        self.board = np.zeros((self.BOARD_SIZE, self.BOARD_SIZE)); # initialize a 7x7 board populated with 0's\n",
     "        \n",
     "        self.board[2:5, 2:5] = 1 # populate the center 3x3 tiles with 1's (gold ships)\n",
     "        self.board[3][3] = 2 # populate the center tile with 2 (flag)\n",
@@ -148,7 +152,102 @@
     "            self.board[new_x][new_y] = self.board[old_x][old_y] # if no errors were raised, change the position\n",
     "            self.board[old_x][old_y] = 0\n",
     "                \n",
-    "            self.toMove *= -1 # after capturing, give the turn to the other player"
+    "            self.toMove *= -1 # after capturing, give the turn to the other player\n",
+    "            \n",
+    "    def evaluate_board(self, player) : # evaluates the board and returns the heuristic for the current player\n",
+    "        heuristic = 0\n",
+    "        \n",
+    "        if player == 1 : # gold pieces\n",
+    "            if self.gameState == 1 :\n",
+    "                return np.inf # infinity if it's a winning game state\n",
+    "            \n",
+    "        else : # silver pieces\n",
+    "            if self.gameState == -1 :\n",
+    "                return np.inf # infinity if it's a winning game state\n",
+    "            \n",
+    "    def count_pieces_missing(self,player) : # how many pieces have been captured from a player\n",
+    "        if player == 1 : # gold pieces\n",
+    "            return self.TOTAL_GOLD_PIECES - len(self.goldPieces) \n",
+    "        else :\n",
+    "            return self.TOTAL_SILVER_PIECES - len(self.silverPieces)\n",
+    "\n",
+    "    def count_capturable(self, player) :\n",
+    "        result = 0\n",
+    "\n",
+    "        if player == 1:  # gold pieces\n",
+    "            for gold_piece in self.goldPieces: # for every gold piece\n",
+    "                x, y = gold_piece\n",
+    "                # Check if there is a capturable opponent piece in the diagonally adjacent positions\n",
+    "                for dx in [-1, 1]:\n",
+    "                    for dy in [-1, 1]:\n",
+    "                        new_x, new_y = x + dx, y + dy\n",
+    "                        if 0 <= new_x < self.BOARD_SIZE and 0 <= new_y < self.BOARD_SIZE: # assures that it doesn't go out of bounds\n",
+    "                            if self.board[new_x][new_y] == -1:\n",
+    "                                result += 1\n",
+    "\n",
+    "        else:  # silver pieces\n",
+    "            for silver_piece in self.silverPieces: # for every silver piece\n",
+    "                x, y = silver_piece\n",
+    "                # Check if there is a capturable opponent piece in the diagonally adjacent positions\n",
+    "                for dx in [-1, 1] :\n",
+    "                    for dy in [-1, 1] :\n",
+    "                        new_x, new_y = x + dx, y + dy\n",
+    "                        if 0 <= new_x < self.BOARD_SIZE and 0 <= new_y < self.BOARD_SIZE : # assures that it doesn't go out of bounds\n",
+    "                            if self.board[new_x][new_y] == 1 :\n",
+    "                                result += 1\n",
+    "                            elif self.board[new_x][new_y] == 2 : # can capture the flag\n",
+    "                                result += 10\n",
+    "                                \n",
+    "        return result \n",
+    "    \n",
+    "    def count_defended(self, player) : # pieces of the same team that are \"covering\" eachother, aka, diagonally adjacent\n",
+    "        result = 0\n",
+    "\n",
+    "        if player == 1 :  # gold pieces\n",
+    "            for gold_piece in self.goldPieces :  # for every gold piece\n",
+    "                x, y = gold_piece\n",
+    "                # Check if there is a defended piece in the diagonally adjacent positions\n",
+    "                for dx in [-1, 1] :\n",
+    "                    for dy in [-1, 1] :\n",
+    "                        new_x, new_y = x + dx, y + dy\n",
+    "                        if 0 <= new_x < self.BOARD_SIZE and 0 <= new_y < self.BOARD_SIZE :  # assures that it doesn't go out of bounds\n",
+    "                            if self.board[new_x][new_y] == 1 :\n",
+    "                                result += 1\n",
+    "                                continue # so that a piece isn't counted twice, one is enough\n",
+    "\n",
+    "        else :  # silver pieces\n",
+    "            for silver_piece in self.silverPieces :  # for every silver piece\n",
+    "                x, y = silver_piece\n",
+    "                # Check if there is a defended piece in the diagonally adjacent positions\n",
+    "                for dx in [-1, 1] :\n",
+    "                    for dy in [-1, 1] :\n",
+    "                        new_x, new_y = x + dx, y + dy\n",
+    "                        if 0 <= new_x < self.BOARD_SIZE and 0 <= new_y < self.BOARD_SIZE :  # assures that it doesn't go out of bounds\n",
+    "                            if self.board[new_x][new_y] == -1 :\n",
+    "                                result += 1\n",
+    "                                continue # so that a piece isn't counted twice, one is enough\n",
+    "\n",
+    "        return result\n",
+    "    \n",
+    "    def flag_defense(self) : # counts how many gold pieces are defending the flag\n",
+    "        flag_x, flag_y = self.flag\n",
+    "        defense_score = 0\n",
+    "\n",
+    "        \n",
+    "        for dx in [-1, 0, 1]: # Check the spaces around the flag (horizontal)\n",
+    "            for dy in [-1, 0, 1]: # Check the spaces around the flag (vertical)\n",
+    "                new_x, new_y = flag_x + dx, flag_y + dy\n",
+    "                \n",
+    "                if 0 <= new_x < self.BOARD_SIZE and 0 <= new_y < self.BOARD_SIZE: # ensure that it's within board boundaries\n",
+    "                    if self.board[new_x][new_y] == 1 : # if there is a gold piece\n",
+    "                        euclidean_distance = (flag_x - new_x) ** 2 + (flag_y - new_y) ** 2\n",
+    "                        defense_score += euclidean_distance  # adds the euclidian distance\n",
+    "                    elif (new_x, new_y) in self.silverPieces: # if there is a silver piece\n",
+    "                        euclidean_distance = (flag_x - new_x) ** 2 + (flag_y - new_y) ** 2\n",
+    "                        defense_score -= euclidean_distance * 2  # subtracts the euclidian distance times 2\n",
+    "\n",
+    "        return defense_score\n",
+    "        "
    ]
   },
   {
@@ -289,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,16 +459,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Button clicked at row 2, column 5\n",
-      "Button clicked at row 3, column 3\n",
-      "Button clicked at row 5, column 4\n"
+      "Button clicked at row 2, column 2\n",
+      "Button clicked at row 3, column 5\n",
+      "Button clicked at row 4, column 4\n",
+      "Button clicked at row 6, column 3\n"
      ]
     }
    ],
