added more heuristics

--- a/breakthru.ipynb
+++ b/breakthru.ipynb
@@ -192,6 +192,7 @@
     "                for dx in [-1, 1] :\n",
     "                    for dy in [-1, 1] :\n",
     "                        new_x, new_y = x + dx, y + dy\n",
+    "                        # Note: This condition might not be necessary since if the flag gets to one of the edges, the game is over and gold wins\n",
     "                        if 0 <= new_x < self.BOARD_SIZE and 0 <= new_y < self.BOARD_SIZE : # assures that it doesn't go out of bounds\n",
     "                            if self.board[new_x][new_y] == 1 :\n",
     "                                result += 1\n",
@@ -247,7 +248,21 @@
     "                        defense_score -= euclidean_distance * 2  # subtracts the euclidian distance times 2\n",
     "\n",
     "        return defense_score\n",
-    "        "
+    "    \n",
+    "    def flag_open_to_edge(self):\n",
+    "        flag_x, flag_y = self.flag\n",
+    "        open_directions = 0\n",
+    "        \n",
+    "        directions_to_check = [(0, -1), (-1, 0), (0, 1), (1, 0)] # diractions to check\n",
+    "\n",
+    "        for dx, dy in directions_to_check:\n",
+    "            new_x, new_y = flag_x + dx, flag_y + dy\n",
+    "\n",
+    "            if 0 <= new_x < self.BOARD_SIZE and 0 <= new_y < self.BOARD_SIZE:  # Ensure it's within board boundaries\n",
+    "                if not self.hasPiecesBetween(flag_x, flag_y, new_x, new_y):\n",
+    "                    open_directions += 1\n",
+    "\n",
+    "        return open_directions"
    ]
   },
   {
@@ -429,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -467,9 +482,11 @@
      "output_type": "stream",
      "text": [
       "Button clicked at row 2, column 2\n",
-      "Button clicked at row 3, column 5\n",
-      "Button clicked at row 4, column 4\n",
-      "Button clicked at row 6, column 3\n"
+      "Button clicked at row 3, column 4\n",
+      "Button clicked at row 1, column 5\n",
+      "Button clicked at row 3, column 3\n",
+      "Button clicked at row 5, column 3\n",
+      "Button clicked at row 4, column 5\n"
      ]
     }
    ],
